# scrcpy-bridge

./: .gitignore  Cargo.toml  DEV.md  Dockerfile  Dockerfile.distroless  README.md  build.rs
.github/workflows/: release.yml
scripts/: fetch-scrcpy-server.sh
src/: adb.rs  config.rs  lib.rs  main.rs
src/bootstrap/: mod.rs
src/bridge/: mod.rs
src/datachannel/: mod.rs
src/mqtt/: mod.rs  signaling.rs
src/observability/: mod.rs
src/scrcpy/: audio.rs  control.rs  mod.rs  protocol.rs  server.rs  video.rs
src/webrtc/: mod.rs  peer.rs
