[package]
name = "scrcpy-bridge"
version = "0.1.2"
edition = "2021"
rust-version = "1.80"
description = "Bridge scrcpy H.264 streams to WebRTC. sibling process to Python device-agent."
license = "MIT"
repository = "https://github.com/beeos-ai/scrcpy-bridge"
default-run = "scrcpy-bridge"

# ── cargo-dist configuration (workspace-local) ─────────────────
# Released targets:
#   - x86_64-unknown-linux-gnu / aarch64-unknown-linux-gnu (glibc)
#   - x86_64-unknown-linux-musl / aarch64-unknown-linux-musl (static)
#   - x86_64-apple-darwin / aarch64-apple-darwin
#   - x86_64-pc-windows-msvc
#
# Enable by running `cargo dist init` once in CI; the resulting
# `.github/workflows/release.yml` is committed alongside this file.
[package.metadata.dist]
# Install method is left to downstream workflow; the binary is
# self-contained and requires only an `adb` at runtime.
installers = []
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "scrcpy-bridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.41", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "process",
    "sync",
    "time",
    "signal",
    "fs",
] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.8"
byteorder = "1.5"
hex = "0.4"

# MQTT client
rumqttc = { version = "0.25", features = ["use-rustls", "websocket"] }

# rustls 0.23 stopped picking a default CryptoProvider automatically: when
# multiple transitive crates (rumqttc/reqwest/tungstenite) disable rustls'
# default features, the runtime can't tell which provider to use and panics
# on the first TLS handshake with `Could not automatically determine the
# process-level CryptoProvider`. We explicitly install `aws-lc-rs` once in
# `main.rs` BEFORE any TLS path is exercised — no Cargo feature wrangling
# needed (which never converged on "exactly one provider" across
# transitive deps).
rustls = { version = "0.23", features = ["aws_lc_rs"] }

# str0m (via its default features) enables the `asm` feature of the `sha1`
# crate, which on aarch64 pulls in `sha1-asm` 0.5.3 → buggy on Apple Silicon
# and miscomputes the digest used by tungstenite's `Sec-WebSocket-Accept`
# validation (leading to `Key mismatch` on every MQTT handshake). Cargo
# feature unification means we can't flip the flag on str0m alone; we instead
# opt this whole crate (and, transitively, tungstenite) into sha1's
# `force-soft` backend which short-circuits the asm branch. No measurable
# perf impact for the WebSocket + DTLS paths we exercise.
sha1 = { version = "0.10", default-features = false, features = ["force-soft"] }

# URL parsing (for mqtt:// / ws:// / wss://)
url = "2.5"

# WebRTC (sans-IO)
str0m = { version = "0.9" }

# Random (nonces, SSRC allocation, etc.)
rand = "0.8"

# Local HTTP server for /metrics + /healthz (tiny)
hyper = { version = "1.5", features = ["http1", "server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["server", "tokio", "http1"] }

# Prometheus metrics
prometheus = { version = "0.13", default-features = false }
once_cell = "1.20"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock"] }

tempfile = "3.14"

# HTTP client for agent-gateway /bootstrap (Ed25519 refresh path).
# rustls-tls keeps us off the system OpenSSL ABI so the static musl build
# produced by cargo-dist still links.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
] }

# Ed25519 signing for Agent Gateway auth.
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }

# base64 for encoding the identity key file and signature headers.
base64 = "0.22"

# UUID generation for request nonces.
uuid = { version = "1.10", features = ["v4"] }

# Enumerate local network interfaces so we can advertise real LAN IPs as
# ICE host candidates even when bound to 0.0.0.0. Without this, browsers
# that use mDNS (.local) candidates (Chrome/Safari default) can't
# reach a loopback-only bridge, because str0m rejects mDNS hostnames on
# the remote side. `if-addrs` is a tiny pure-Rust crate with no deps.
if-addrs = "0.13"

[build-dependencies]
# Pure-Rust raw deflate for build.rs. Used to extract `classes.dex` out of
# the upstream scrcpy-server APK without shelling out to `python3 -c
# 'zlib.decompress(...)'`. The python fallback worked on dev hosts and on
# the GitHub-hosted Ubuntu runners, but cross's default musl/aarch64
# images don't ship python3 — making the previous implementation silently
# return None inside extract_zip_entry and panic with the misleading
# "classes.dex not found in upstream release" error. flate2 is a tiny
# crate with a vendored miniz_oxide backend that builds inside cross
# without any runtime tools.
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

[dev-dependencies]
tokio = { version = "1.41", features = ["full", "test-util"] }
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[profile.dist]
inherits = "release"
lto = "fat"
